Completed alignment fix for first landscape rule, added a new landscape rule for smaller width screens

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@ and (max-height: 500px) {
         float: left;
         margin-left: 20px;
         margin-right: 20px;
+        margin-top: -20px;
+        margin-bottom: 20px;
     }
 
     #links {
@@ -48,9 +50,16 @@ and (max-height: 500px) {
         max-width: 500px;
         float: right;
         margin-right: 20px;
-        margin-top: 35px;
+        margin-top: 20px;
     }
-}   
+}
+
+@media only screen and (orientation: landscape) 
+and (max-height: 350px) {
+    #main {
+        background-color: red;
+    }
+}
 
 * {
     font-family: Roboto-Regular, sans-serif;
